--- a/src/app/user-claims-list/user-claims-list.component.html
+++ b/src/app/user-claims-list/user-claims-list.component.html
@@ -28,7 +28,7 @@
     </div>
 </div> -->
 
-<table>
+<!-- <table>
     <tr>
         <td colspan="4">First records</td>
     </tr>
@@ -39,7 +39,7 @@
     </tr>
 </table>
 
-<!-- <div class="row" *ngfor="let my in myData" >
+<div class="row" *ngfor="let my in myData" >
     <div class="col s12 m7">
         <div class="card">
             <div class="card-content">
